--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "nodejs-shop-app",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "Complete Full Node APP",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Corama Yunus",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.19.4"
@@ -17,11 +17,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "express-handlebars": "^3.0.0",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.15",
-    "mysql2": "^1.6.1",
-    "pug": "^2.0.4",
-    "sequelize": "^5.0.0-beta.11"
+    "mongoose": "^5.10.15"
   }
 }
