--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15"
   }
