--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
