--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
