--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "MONGO_USER=ramadhan MONGO_PASSWORD=ramadhan MONGO_DEFAULT_DATABASE=stage_2 node app.js",
+    "start": "MONGODB_URI=mongodb+srv://ramadhan:ramadhan@rest.c8dmh.mongodb.net/stage_2?retryWrites=true&w=majority node app.js",
     "start:dev": "nodemon app.js",
     "start-server": "node app.js"
   },
